VPC-Peering/Modules/single-vpc-to-vpc/08-route-table-association.tf
### Route Table Association for Source ###

resource "aws_route_table_association" "a" {
  provider = aws.us-east
  subnet_id      = aws_subnet.source_subnet1.id
  route_table_id = aws_route_table.this_source_rt.id

  depends_on = [ aws_route_table.this_source_rt ]
}

resource "aws_route_table_association" "b" {
  provider = aws.us-east
  subnet_id      = aws_subnet.source_subnet2.id
  route_table_id = aws_route_table.this_source_rt.id

  depends_on = [ aws_route_table.this_source_rt ]
}

resource "aws_route_table_association" "pub_a" {
  provider = aws.us-east
  subnet_id      = aws_subnet.source_public_subnet.id
  route_table_id = aws_route_table.public_source_rt.id

  depends_on = [ aws_route_table.public_source_rt ]
}

### Route Table Association for Destination VPC Public Subnet

resource "aws_route_table_association" "c" {
  provider = aws.us-west
  subnet_id      = aws_subnet.dest_subnet1.id
  route_table_id = aws_route_table.this_rt.id

  depends_on = [ aws_route_table.this_rt ]
}

resource "aws_route_table_association" "d" {
  provider = aws.us-west
  subnet_id      = aws_subnet.dest_subnet2.id
  route_table_id = aws_route_table.this_rt.id
  
  depends_on = [ aws_route_table.this_rt ]
}

resource "aws_route_table_association" "dest_d" {
  provider = aws.us-west
  subnet_id      = aws_subnet.dest_public_subnet.id
  route_table_id = aws_route_table.this_pub_rt.id
  
  depends_on = [ aws_route_table.this_pub_rt ]
}
